Arregle el index y conecte la base de datos correctamente

--- a/src/.env
+++ b/src/.env
@@ -2,8 +2,11 @@
 PORT=3000
 
 
-DB_HOST=127.0.0.1
+DB_HOST=localhost                   
 DB_USER=root
 DB_PASSWORD=12345
 DB_NAME=bd_alquilercanchas
 DB_PORT=3306
+
+
+JWT_SECRET=claveSuperSecreta123    
