--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "backend_turnoscancha",
   "version": "1.0.0",
   "description": "este sera un buen sistema para sacar turnos en las canchas ",
-  "main": "app.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch index.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "set NODE_OPTIONS=--experimental-vm-modules && jest",
     "cobertura": "set NODE_OPTIONS=--experimental-vm-modules && jest --coverage"
   },
@@ -23,8 +24,10 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "moment": "2.30.1",
-    "morgan": "1.10.0",
+    "morgan": "^1.10.0",
     "mysql2": "^3.11.4",
     "supertest": "^7.0.0"
   },
